--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anil Guzel - Software Engineer</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
             margin: 0;
-            background-color: #f8f9fa;
+            background-color: #f0f2f5;
             color: #333;
             line-height: 1.6;
         }
         header {
             background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
             color: #fff;
-            padding: 3rem 0;
+            padding: 4rem 0 2rem;
             text-align: center;
         }
         header h1 {
@@ -32,6 +33,7 @@
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             position: sticky;
             top: 0;
+            z-index: 1000;
         }
         nav ul {
             list-style: none;
@@ -72,6 +74,13 @@
         ul {
             padding-left: 1.2rem;
         }
+        .contact-list li {
+            margin-bottom: 0.5rem;
+        }
+        .contact-list a {
+            color: #2575fc;
+            text-decoration: none;
+        }
         footer {
             text-align: center;
             padding: 2rem 0;
@@ -82,36 +91,59 @@
 <body>
     <header>
         <h1>Anil Guzel</h1>
-        <p>Software Engineer</p>
+        <p>Team Lead & Software Engineer</p>
     </header>
     <nav>
         <ul>
             <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#education">Education</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
     <div class="container">
         <section id="about">
             <h2>About Me</h2>
-            <p>Hello! I'm Anil, a software engineer passionate about creating clean and efficient applications. I enjoy tackling challenging problems and learning new technologies.</p>
+            <p>Software engineer focused on scalable architectures and event-driven systems. I enjoy leading teams and delivering resilient products using .NET, Go, and cloud technologies.</p>
+        </section>
+        <section id="experience">
+            <h2>Experience</h2>
+            <ul>
+                <li><strong>Team Lead, P-Tech</strong> <em>(2024&ndash;present)</em> – Designed multi-tenant infrastructure and led integration with Open Banking systems while mentoring engineers.</li>
+                <li><strong>Software Engineer, Hepsiburada</strong> <em>(2021&ndash;2023)</em> – Built high-performance campaign services in Go and optimized search with Elasticsearch. Led CI/CD improvements and incident response.</li>
+                <li><strong>Software Engineer, Tos Analytics</strong> <em>(2020&ndash;2021)</em> – Developed the Pakodemy platform from proof-of-concept to production, driving system redesign for high throughput.</li>
+                <li><strong>Backend Engineer, Madbyte Games</strong> <em>(2019&ndash;2020)</em> – Worked on IAM services and affiliate integrations for Zula, the studio’s flagship game.</li>
+                <li><strong>Software Engineer, Interaktif Group</strong> <em>(2018&ndash;2019)</em> – Created education and e‑commerce projects including sem.marmarateknokent.com.tr.</li>
+            </ul>
         </section>
         <section id="skills">
             <h2>Skills</h2>
             <ul>
-                <li>Python, JavaScript</li>
-                <li>Web Development</li>
-                <li>Systems Design</li>
+                <li>C#, Go, JavaScript/React</li>
+                <li>Microservices, Event-Driven Architecture</li>
+                <li>Docker, Kubernetes, CI/CD</li>
+                <li>SQL &amp; NoSQL Databases</li>
+                <li>AWS &amp; Azure Cloud</li>
             </ul>
         </section>
-        <section id="projects">
-            <h2>Projects</h2>
-            <p>Check out my projects on <a href="https://github.com/anilguzel" target="_blank">GitHub</a>.</p>
+        <section id="education">
+            <h2>Education</h2>
+            <ul>
+                <li>B.Sc. in Geology Engineering, Istanbul University (2013&ndash;2020)</li>
+                <li>Microsoft Software Specialist Program, Brussels Capital University (2016&ndash;2017)</li>
+                <li>Enterprise Design Patterns &amp; Architectures, BT Academy (2019)</li>
+            </ul>
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>You can reach me at <a href="mailto:anilguzel.net@gmail.com">anilguzel.net@gmail.com</a>.</p>
+            <ul class="contact-list">
+                <li><i class="fas fa-envelope"></i> <a href="mailto:anilguzel95@gmail.com">anilguzel95@gmail.com</a></li>
+                <li><i class="fas fa-phone"></i> <a href="tel:+905459619055">+90 545 961 9055</a></li>
+                <li><i class="fab fa-github"></i> <a href="https://github.com/anilguzel" target="_blank">github.com/anilguzel</a></li>
+                <li><i class="fab fa-linkedin"></i> <a href="https://linkedin.com/in/anil-guzel" target="_blank">linkedin.com/in/anil-guzel</a></li>
+                <li><i class="fab fa-medium"></i> <a href="https://anilvari.medium.com" target="_blank">anilvari.medium.com</a></li>
+            </ul>
         </section>
     </div>
     <footer>
