--- a/index.html
+++ b/index.html
@@ -107,16 +107,27 @@
             <h2>About Me</h2>
             <p>Software engineer focused on scalable architectures and event-driven systems. I enjoy leading teams and delivering resilient products using .NET, Go, and cloud technologies.</p>
         </section>
-        <section id="experience">
-            <h2>Experience</h2>
-            <ul>
-                <li><strong>Team Lead, P-Tech</strong> <em>(2024&ndash;present)</em> – Designed multi-tenant infrastructure and led integration with Open Banking systems while mentoring engineers.</li>
-                <li><strong>Software Engineer, Hepsiburada</strong> <em>(2021&ndash;2023)</em> – Built high-performance campaign services in Go and optimized search with Elasticsearch. Led CI/CD improvements and incident response.</li>
-                <li><strong>Software Engineer, Tos Analytics</strong> <em>(2020&ndash;2021)</em> – Developed the Pakodemy platform from proof-of-concept to production, driving system redesign for high throughput.</li>
-                <li><strong>Backend Engineer, Madbyte Games</strong> <em>(2019&ndash;2020)</em> – Worked on IAM services and affiliate integrations for Zula, the studio’s flagship game.</li>
-                <li><strong>Software Engineer, Interaktif Group</strong> <em>(2018&ndash;2019)</em> – Created education and e‑commerce projects including sem.marmarateknokent.com.tr.</li>
-            </ul>
-        </section>
+<section id="experience">
+  <h2>Experience</h2>
+  <ul>
+    <li>
+      <strong>Team Lead, P-Tech</strong> <em>(2024–Present)</em> – Defined and led the architecture of a scalable multi-tenant wallet platform. Spearheaded Open Banking integrations and established engineering practices fostering autonomy and system ownership across the team.
+    </li>
+    <li>
+      <strong>Software Engineer, Hepsiburada</strong> <em>(2021–2023)</em> – Owned mission-critical services across campaign and checkout domains. Designed low-latency distributed systems in Go, introduced consistency patterns, and scaled platform observability with custom metrics pipelines.
+    </li>
+    <li>
+      <strong>Software Engineer, Tos Analytics</strong> <em>(2020–2021)</em> – Architected and built backend foundations of an ed-tech platform from scratch. Led technical strategy from prototype to production, introducing scalable async patterns and cloud-native data flows.
+    </li>
+    <li>
+      <strong>Backend Engineer, Madbyte Games</strong> <em>(2019–2020)</em> – Reengineered core account and telemetry services for a high-traffic online game. Designed modular backend layers to support multi-platform identity, affiliate systems, and data-driven player features.
+    </li>
+    <li>
+      <strong>Software Engineer, Interaktif Group</strong> <em>(2018–2019)</em> – Delivered production-grade platforms in fast-paced agency environments. Contributed to domain modeling, performance tuning, and service robustness in customer-facing systems.
+    </li>
+  </ul>
+</section>
+
         <section id="skills">
             <h2>Skills</h2>
             <ul>
@@ -139,7 +150,6 @@
             <h2>Contact</h2>
             <ul class="contact-list">
                 <li><i class="fas fa-envelope"></i> <a href="mailto:anilguzel95@gmail.com">anilguzel95@gmail.com</a></li>
-                <li><i class="fas fa-phone"></i> <a href="tel:+905459619055">+90 545 961 9055</a></li>
                 <li><i class="fab fa-github"></i> <a href="https://github.com/anilguzel" target="_blank">github.com/anilguzel</a></li>
                 <li><i class="fab fa-linkedin"></i> <a href="https://linkedin.com/in/anil-guzel" target="_blank">linkedin.com/in/anil-guzel</a></li>
                 <li><i class="fab fa-medium"></i> <a href="https://anilvari.medium.com" target="_blank">anilvari.medium.com</a></li>
